# odeint_bloch

./: .gitignore  AUTHORS  ChangeLog  Makefile.in  README  aclocal.m4  configure  configure.ac
src/: AdiabaticRF.hpp  Bloch.hpp  Container.hpp  Event.hpp  File.hpp  Gradient.hpp  HDF5File.cpp  HDF5File.hpp  HardRF.hpp  Makefile.am  Makefile.in  NDData.hpp  RF.hpp  Recorder.hpp  Sample.hpp  Signal.hpp  Spin.hpp  config.h.in  odeint_bloch.cpp
